# tree-sitter-volt

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.zed/: settings.json
bindings/c/: tree-sitter-volt.pc.in
bindings/c/tree_sitter/: tree-sitter-volt.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_volt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVoltTests/: TreeSitterVoltTests.swift
nix/: package.nix  shell.nix
queries/: highlights.scm  locals.scm  tags.scm
samples/Circuits/CycleDeps/: Project.vl
samples/Circuits/DiamandDeps/: Project.vl
samples/Circuits/TwoDeps/: Project.vl
samples/IO/: Puts.vl
samples/JSX/: Project.vl
samples/JSX/Components/: Counter.vlx  Header.vlx  UserProfile.vlx
samples/JSX/Models/: User.vl
samples/Memory/: AlignedAllocator.vl  Slice.vl  SmartPtr.vl  Vector.vl
samples/Mixins/: Comparable.vl  Hashable.vl  Inspectable.vl  Iterable.vl
samples/Primitives/: Array.vl  Bool.vl  Float.vl  Hash.vl  Int.vl  Pointer.vl  Regex.vl  String.vl  Symbol.vl
samples/Syntax/ControlFlow/: CaseWhen.vl  IfUnless.vl
samples/Syntax/Loop/: ForLoop.vl  WhileLoop.vl
samples/Syntax/Macros/: Delegate.vl  Serializable.vl
samples/Syntax/OOP/: Classes.vl  FullOOP.vl  Mixins.vl  Modules.vl  Structs.vl
src/: grammar.json  node-types.json  parser.c
(+10 files in other folders)
